
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nvt_dev {int dummy; } ;


 int CIR_IRCON ;
 int CIR_IREN ;
 int CIR_IRSTS ;
 int CR_LOGICAL_DEV_EN ;
 int LOGICAL_DEV_CIR ;
 int LOGICAL_DEV_DISABLE ;
 int nvt_cir_reg_write (struct nvt_dev*,int,int ) ;
 int nvt_clear_cir_fifo (struct nvt_dev*) ;
 int nvt_clear_tx_fifo (struct nvt_dev*) ;
 int nvt_cr_write (struct nvt_dev*,int ,int ) ;
 int nvt_efm_disable (struct nvt_dev*) ;
 int nvt_efm_enable (struct nvt_dev*) ;
 int nvt_select_logical_dev (struct nvt_dev*,int ) ;

__attribute__((used)) static void nvt_disable_cir(struct nvt_dev *nvt)
{

 nvt_cir_reg_write(nvt, 0, CIR_IREN);


 nvt_cir_reg_write(nvt, 0xff, CIR_IRSTS);


 nvt_cir_reg_write(nvt, 0, CIR_IRCON);


 nvt_clear_cir_fifo(nvt);
 nvt_clear_tx_fifo(nvt);

 nvt_efm_enable(nvt);


 nvt_select_logical_dev(nvt, LOGICAL_DEV_CIR);
 nvt_cr_write(nvt, LOGICAL_DEV_DISABLE, CR_LOGICAL_DEV_EN);

 nvt_efm_disable(nvt);
}
